syntax = "proto3";
import "google/protobuf/timestamp.proto";

package v2.mod_disco.services;

option go_package = "github.com/getcouragenow/mod/mod-disco/service/go/rpc/v2";

message UserInfo {
  string sys_account_ref_id = 1;
  string selected_country = 2;
  string selected_city = 3;
  string selected_age_range = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message NewUserInfo {
  string sys_account_ref_id = 1;
  string sys_account_ref_email = 2;
  string selected_country = 3;
  string selected_city = 4;
  string selected_age_range = 5;
}

message UpdateUserInfo {
  string sys_account_ref_id = 1;
  string selected_country = 2;
  string selected_city = 3;
  string selected_age_range = 4;
}

message UserInfoValues {
  string id = 1;
  // @inject_tag: fakesize:60 fake:{country}
  repeated string countries = 2;
  // @inject_tag: fakesize:1000 fake:{city}
  repeated string cities = 3;
  // @inject_tag: fakesize:8 fake:{daterange}
  repeated string selected_age_ranges = 4;
}

message SupportRoleType {
  string id = 1;
  string survey_project_ref_id = 2;
  string name = 3;
  string comment = 4;
  string description = 5;
  string unit_of_measures = 6;
}

message NewSupportRoleType {
  // @inject_tag: fake:"skip" yaml:"survey_project_ref_id,omitempty"
  string survey_project_ref_id = 1;
  // @inject_tag: fake:"skip" yaml:"survey_project_ref_name,omitempty"
  string survey_project_ref_name = 2;
  // @inject_tag: fake:"{nameseq:support_role_type,false,none,false,false}" yaml:"name,omitempty"
  string name = 3;
  // @inject_tag: fake:"{sentence:8}" yaml:"comment,omitempty"
  string comment = 4;
  // @inject_tag: fake:"{jobtitle}" yaml:"description,omitempty"
  string description = 5;
  // @inject_tag: fake:"{randomstring:[days,weeks,months]}" yaml:"unit_of_measures,omitempty"
  string unit_of_measures = 6;
}

message SupportRoleValue {
  string id = 1;
  string survey_user_ref_id = 2;
  string support_role_type_ref_id = 3;
  uint64 pledged = 4;
  string comment = 5;
}

message NewSupportRoleValue {
  // @inject_tag: fake:"skip" yaml:"id,omitempty"
  string id = 1;
  // @inject_tag: fake:"skip" yaml:"survey_user_ref_id,omitempty"
  string survey_user_ref_id = 2;
  // @inject_tag: fake:"skip" yaml:"survey_user_ref_name,omitempty"
  string survey_user_ref_name = 3;
  // @inject_tag: fake:"skip" yaml:"support_role_type_ref_id,omitempty"
  string support_role_type_ref_id = 4;
  // @inject_tag: fake:"{nameseq:support_role_type,true,support_role_type,true,false}" yaml:"support_role_type_ref_name,omitempty"
  string support_role_type_ref_name = 5;
  // @inject_tag: fake:"{number:1,100}" yaml:"pledged,omitempty"
  uint64 pledged = 6;
  // @inject_tag: fake:"{sentence:4}" yaml:"comment,omitempty"
  string comment = 7;
}

message UserNeedsType {
  string id = 1;
  string survey_project_ref_id = 2;
  string name = 3;
  string comment = 4;
  string description = 5;
  string unit_of_measures = 6;
  string question_group = 7;
  string question_type = 8;
  // only filled if the question_type is dropdown
  string dropdown_question = 9;
}

message NewUserNeedsType {
  // @inject_tag: fake:"skip" yaml:"id,omitempty"
  string id = 1;
  // @inject_tag: fake:"skip" yaml:"survey_project_ref_id,omitempty"
  string survey_project_ref_id = 2;
  // @inject_tag: fake:"{nameseq:user_needs_type,false,none,false,false}" yaml:"name,omitempty"
  string name = 3;
  // @inject_tag: fake:"{sentence:4}" yaml:"comment,omitempty"
  string comment = 4;
  // @inject_tag: fake:"{question}" yaml:"description,omitempty"
  string description = 5;
  // @inject_tag: fake:"{randomstring:[days,weeks,months]}" yaml:"unit_of_measures,omitempty"
  string unit_of_measures = 6;
  // @inject_tag: fake:"{randomstring:[question_group_1,question_group_2,question_group_3,question_group_4,question_group_5,question_group_6]}" yaml:"group,omitempty"
  string question_group = 7;
  // @inject_tag: fake:"{randomstring:[dropdown,textfield,singlecheckbox]}" yaml:"questionType,omitempty"
  string question_type = 8;
  // @inject_tag: fake:"{question}" yaml:"dropdownQuestion,omitempty"
  string dropdown_question = 9;
}

message UserNeedsValue {
  string id = 1;
  string survey_user_ref_id = 2;
  string user_needs_type_ref_id = 3;
  string comments = 4;
}

message SurveyValuePlusAccount {
  string id = 1;
  string sys_account_user_ref_name = 2;
  uint64 pledged = 3;
  google.protobuf.Timestamp created_at = 4;
}

message NewUserNeedsValue {
  // @inject_tag: fake:"skip" yaml:"survey_user_ref_name,omitempty"
  string survey_user_ref_name = 1;
  // @inject_tag: fake:"skip" yaml:"survey_user_ref_id,omitempty"
  string survey_user_ref_id = 2;
  // @inject_tag: fake:"skip" yaml:"user_needs_type_ref_id,omitempty"
  string user_needs_type_ref_id = 3;
  // @inject_tag: fake:"{nameseq:user_needs_type,true,user_needs_type,true,false}" yaml:"user_needs_type_ref_name,omitempty"
  string user_needs_type_ref_name = 4;
  // @inject_tag: fake:"{sentence:4}" yaml:"comments,omitempty"
  string comments = 5;
}

message SurveyProject {
  string survey_project_id = 1;
  string sys_account_project_ref_id = 2;
  repeated SupportRoleType support_role_types = 3;
  repeated UserNeedsType user_need_types = 4; // SurveyFilterType in JSON format
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  string survey_project_name = 7;
}

message SurveyUser {
  string survey_user_id = 1;
  string survey_project_ref_id = 2;
  string sys_account_account_ref_id = 3;
  repeated SupportRoleValue support_role_values = 4;
  repeated UserNeedsValue user_need_values = 5; // serialized to strongly typed stuff in DB
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  string survey_project_ref_name = 8;
  string survey_user_name = 9;
}

message DiscoProject {
  string project_id = 1;
  string sys_account_project_ref_id = 2; // account project id
  string sys_account_org_ref_id = 3; // account org id
  string goal = 4;
  uint64 already_pledged = 5;
  google.protobuf.Timestamp action_time = 6;
  string action_location = 7;
  uint64 min_pioneers = 8;
  uint64 min_rebels_media = 9;
  uint64 min_rebels_to_win = 10;
  string action_length = 11;
  string action_type = 12;
  string category = 14;
  string contact = 15;
  string hist_precedents = 16;
  string strategy = 17;
  repeated string video_url = 18;
  string unit_of_measures = 19;
  google.protobuf.Timestamp created_at = 20;
  google.protobuf.Timestamp updated_at = 21;
  repeated string image_resource_ids = 22;
  repeated bytes project_images = 23;
}

message NewDiscoProjectRequest {
  // @inject_tag: fake:"skip" yaml:"sys_account_project_ref_id,omitempty"
  string sys_account_project_ref_id = 1; // account project id
  // @inject_tag: fake:"skip" yaml:"sys_account_org_ref_id,omitempty"
  string sys_account_org_ref_id = 2; // account org id
  // @inject_tag: fake:"{sentence:8}" yaml:"goal,omitempty"
  string goal = 3;
  // @inject_tag: fake:"skip" yaml:"already_pledged,omitempty"
  uint64 already_pledged = 4;
  // @inject_tag: fake:"{randomts}" yaml:"action_time"
  int64 action_time_nano = 5;
  // @inject_tag: fake:"{city}" yaml:"action_location"
  string action_location = 6;
  // @inject_tag: fake:"{number:1000,10000}" yaml:"min_pioneers"
  uint64 min_pioneers = 7;
  // @inject_tag: fake:"{number:1000,1500}" yaml:"min_rebels_media"
  uint64 min_rebels_media = 8;
  // @inject_tag: fake:"{number:1000,1500}" yaml:"min_rebels_to_win"
  uint64 min_rebels_to_win = 9;
  // @inject_tag: fake:"{randomstring:[14 days, 13 weeks, 12 months]}" yaml:"action_length"
  string action_length = 10;
  // @inject_tag: fake:"{randomstring:[environment,global_campaign,poverty]}" yaml:"action_type"
  string action_type = 11;
  // @inject_tag: fake:"{randomstring:[environment,global_campaign,poverty]}" yaml:"category"
  string category = 12;
  // @inject_tag: fake:"{email}" yaml:"contact"
  string contact = 13;
  // @inject_tag: fake:"{sentence:8}" yaml:"hist_precedents"
  string hist_precedents = 14;
  // @inject_tag: fake:"{sentence:8}" yaml:"strategy"
  string strategy = 15;
  // @inject_tag: fake:"{randomyt}" fakesize:"2" yaml:"video_url"
  repeated string video_url = 16;
  // @inject_tag: fake:"{randomstring:[days,weeks,months]}" yaml:"unit_of_measures"
  string unit_of_measures = 17;
  // @inject_tag: fake:"{nameseq:sys_account_project,true,sys_account_project,true,false}" yaml:"sys_account_project_ref_name"
  string sys_account_project_ref_name = 18;
  // @inject_tag: fake:"{nameseq:sys_account_org,true,sys_account_org,false,false}" yaml:"sys_account_org_ref_name,omitempty"
  string sys_account_org_ref_name = 19;
  // @inject_tag: fake:"300" fakesize:"3" yaml:"image_filepath,omitempty"
  repeated string image_filepath = 20;
  // @inject_tag: fake:"{logogen:300}" yaml:"image_upload_arrays,omitempty"
  repeated string image_upload_arrays = 21;
}

message UpdateDiscoProjectRequest {
  string project_id = 1;
  string goal = 2;
  uint64 already_pledged = 3;
  google.protobuf.Timestamp action_time = 4;
  string action_location = 5;
  uint64 min_pioneers = 6;
  uint64 min_rebels_media = 7;
  uint64 min_rebels_to_win = 8;
  string action_length = 9;
  string action_type = 10;
  string category = 11;
  string contact = 12;
  string hist_precedents = 13;
  string strategy = 14;
  string video_url = 15;
  string unit_of_measures = 16;
  repeated bytes image_uploads = 17;
  repeated string image_resource_ids = 18;
}

message IdRequest {
  string survey_user_id = 1;
  string sys_account_project_id = 2;
  string survey_project_id = 3;
  string sys_account_account_id = 4;
  string disco_project_id = 5;
  string sys_account_org_id = 6;
}

message ListRequest {
  IdRequest id_request = 1;
  int64 per_page_entries = 2;
  string order_by = 3;
  string current_page_id = 4;
  bytes filters = 5;
  bool isDescending = 6;
  string matcher = 7;
}

message ListResponse {
  repeated SurveyProject survey_projects = 1;
  repeated SurveyUser survey_users = 2;
  int64 next_page_id = 3;
  repeated DiscoProject disco_projects = 4;
}

message NewSurveyProjectRequest {
  // @inject_tag: fake:"skip" yaml:"sys_account_project_ref_id,omitempty"
  string sys_account_project_ref_id = 1;
  // @inject_tag: fakesize:"5" yaml:"support_role_types"
  repeated NewSupportRoleType support_role_types = 2;
  // @inject_tag: fakesize:"5" yaml:"user_need_types"
  repeated NewUserNeedsType user_need_types = 3;
  // @inject_tag: fake:"{nameseq:sys_account_project,true,sys_account_project,true,false}" yaml:"sys_account_project_ref_name"
  string sys_account_project_ref_name = 4;
  // @inject_tag: fake:"{nameseq:survey_project,false,none,false,false}" yaml:"survey_project_name"
  string survey_project_name = 5;
}

message NewSurveyUserRequest {
  // @inject_tag: fake:"skip" yaml:"survey_project_ref_id,omitempty"
  string survey_project_ref_id = 1;
  // @inject_tag: fake:"skip" yaml:"sys_account_user_ref_id,omitempty"
  string sys_account_user_ref_id = 2;
  // @inject_tag: fakesize:"5" yaml:"support_role_values"
  repeated NewSupportRoleValue support_role_values = 3;
  // @inject_tag: fakesize:"5" yaml:"user_need_values"
  repeated NewUserNeedsValue user_need_values = 4;
  // @inject_tag: fake:"{nameseq:survey_project,true,survey_project,false,false}" yaml:"survey_project_ref_name"
  string survey_project_ref_name = 5;
  // @inject_tag: fake:"{mailseq:user,true,sys_account_email,true}" yaml:"sys_account_user_ref_name"
  string sys_account_user_ref_name = 6;
  // @inject_tag: fake:"{nameseq:survey_user,false,none,false,false}" yaml:"survey_user_name"
  string survey_user_name = 7;
}

message UpdateSurveyProjectRequest {
  string survey_project_id = 1;
  repeated SupportRoleType support_role_types = 2;
  repeated UserNeedsType user_need_types = 3;
}

message UpdateSurveyUserRequest {
  string survey_user_id = 1;
  repeated SupportRoleValue support_role_values = 2;
  repeated UserNeedsValue user_need_values = 3;
}

message GenIdResponse {
  string temp_id = 1;
}

message StatisticRequest {
  string table_name = 1;
  bool include_counts = 2;
  bytes filters = 3; // json
  string current_page_id = 4;
  int64 limit = 5;
  string order_by = 6;
  bool is_descending = 7;
  int64 per_page_entries = 8;
}

message StatisticResponse {
  repeated SurveyValuePlusAccount survey_value_plus_account = 1;
  string next_page_id = 2;
  int64 total_count = 3;
}