syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

package v2.mod_services;

option go_package = "github.com/getcouragenow/mod/mod-dummy/service/go/rpc/v2";

message ErrorReason {
  string reason = 1;
}

message UserDefinedFields {
  map<string, google.protobuf.Value> fields = 1;
}

// UserRoles for now
enum Roles {
  INVALID = 0;
  GUEST = 1;
  USER = 2;
  ADMIN = 3; // can be Org or Project Admin
  SUPERADMIN = 4; // can do all
}

// resource: Project
message Project {
  string id = 1;
}

// resource: Org
message Org {
  string id = 1;
}

// UserRole as a message is super simple
// and probably not the very best
// it defines the role as an enum of Roles
// alongside either None (for guest)
// or All ( superadmin)
// or specific project by its id (Project admin)
// or specific org by its id (Org admin)
message UserRoles {
  Roles role = 1;
  Project project = 2;
  Org org = 3;
  bool all = 4;
}

message Account {
  string id = 1;
  string email = 2;
  string password = 3;
  UserRoles role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  google.protobuf.Timestamp last_login = 7;
  bool disabled = 8;
  UserDefinedFields fields = 9;
  UserDefinedFields survey = 10;
}

message GetAccountRequest {
  string id = 1;
}

